fixed bottom footer alignment

--- a/menu.css
+++ b/menu.css
@@ -122,9 +122,9 @@ a:hover, a:active {
 	margin: -2.7px 2px 0 0;
 }
 
-.language {
+/*.language {
 	margin-top: -26px;
-}
+}*/
 
 .language img {
 	margin: -2.7px 5px 0 0;
